# rules_checkstyle

./: MODULE.bazel  README.md  WORKSPACE  rules_checkstyle_dependencies_install.json
.github/workflows/: publish.yml
checkstyle/: defs.bzl  load_checkstyle_dependencies.bzl  load_checkstyle_rule_dependencies.bzl
checkstyle/wrapper/: BUILD.bazel
checkstyle/wrapper/src/main/java/rules_checkstyle/: Main.java
dependencies/: load_dependencies.bzl  load_rule_dependencies.bzl
generate/: BUILD.bazel  MODULE.bazel  WORKSPACE  generate.py  get_checkstyle_group.py  get_version.py  publish.py
